--- a/src/sass/blocks/_promo.scss
+++ b/src/sass/blocks/_promo.scss
@@ -1,1 +1,79 @@
-
+.promo {
+    min-height: 860px;
+    padding-top: 10px;
+    position: relative;
+    background: linear-gradient(90deg, rgba(15,57,114,1) 0.1%, rgba(44,232,239,1) 57%, rgba(127,119,188,1) 115%);
+    &-header {
+        height: 45px;
+        border-radius: 11px;
+        background-color: #2f3857;
+        nav {
+            height: 100%;
+        }
+        &__list {
+            height: 100%;
+            margin: 0;
+            display: flex;
+            justify-content: space-evenly;
+            align-items: center;
+            list-style-type: none;
+            &-item {
+                a {
+                   color: #fff;
+                    text-decoration: none;
+                    &:hover {
+                        color: #fff;
+                    }
+                }
+            }
+        }
+    }
+    &-wrapper {
+        margin: 0 auto;
+        max-width: 700px;
+    }
+    &__title {
+        margin-top: 15px;
+        }
+    &-wrapper_model {
+        margin: 0 auto 0 auto;
+        width: 400px;
+        height: 450px;
+    }
+    &-model {
+        width: 100%;
+        height: 100%;
+    }
+    &__descr {
+        text-align: center;
+        font-size: 28px;
+    }
+    &__social {
+        display: flex;
+        justify-content: center;
+        margin-top: 15px;
+        &-link {
+            background: rgb(67, 149, 255);
+            display: flex;
+            align-items: center;
+            border-radius: 30px;
+            padding: 15px;
+            border: 1px solid rgb(0, 115, 255);
+            margin-right: 10px;
+        
+            &:hover {
+                background: rgb(0, 128, 255);
+                transition: 0.2s;
+                text-decoration: none;
+            }
+            img {
+                margin-right: 5px;
+                width: 40px;
+                height: 40px;
+            }
+            span {
+                color: #2f3857;
+            }
+        }
+    }
+}
