--- a/src/sass/blocks/_footer.scss
+++ b/src/sass/blocks/_footer.scss
@@ -1,16 +1,32 @@
 .footer {
-    padding-top: 110px;
-    min-height: 550px;
-    background: linear-gradient(90deg, rgba(15,57,114,1) 0.1%, rgba(44,232,239,1) 57%, rgba(127,119,188,1) 115%);
+    min-height: 500px;
+    background: rgb(16,63,118);
+    background: linear-gradient(90deg, rgb(0, 40, 96) 0.1%, rgb(47, 226, 232) 57%, rgb(155, 141, 255) 115%);
+    .divider {
+        width: 80%;
+        height: 4px;
+        margin-top: 0;
+    }
     &-wrapper {
-        margin: 0 auto;
+        position: relative;
+        margin: 200px auto 0 auto;
+        width: 760px;
     }
     &__text {
-        font-size: 27px;
+        font-size: 28px;
+        text-align: center;
     }
     &__model {
-        margin: 0 auto;
-        width: 130px;
-        height: 130px;
+        width: 250px;
+        height: 150px;
+        position: absolute;
+        &:nth-child(1) {
+            top: 20%;
+            left: -24%;
+        }
+        &:nth-child(2) {
+            top: 20%;
+            right: -24%;
+        }
     }
 }
