--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -2,12 +2,13 @@
 @import 'blocks/divider';
 @import 'blocks/title';
 @import 'blocks/promo';
-@import 'blocks/about';
 @import 'blocks/roadmap';
 @import 'blocks/tokenomika';
 @import 'blocks/guide';
 @import 'blocks/memes';
 @import 'blocks/footer';
+@import 'blocks/menu';
+@import 'blocks/about';
 
 * {
     font-family: "Indie Flower", cursive;
