--- a/src/sass/blocks/_divider.scss
+++ b/src/sass/blocks/_divider.scss
@@ -1,7 +1,7 @@
 .divider {
     margin: 0 auto;
     background: #000000;
-    width: 650px;
+    width: 80%;
     height: 3px;
     border-radius: 15px;
 }
