--- a/src/sass/blocks/_footer.scss
+++ b/src/sass/blocks/_footer.scss
@@ -13,6 +13,7 @@
         width: 760px;
     }
     &__text {
+        font-weight: 600;
         font-size: 28px;
         text-align: center;
     }
