--- a/src/sass/blocks/_memes.scss
+++ b/src/sass/blocks/_memes.scss
@@ -1,9 +1,9 @@
 .memes {
-    min-height: 1100px;
+    height: 1100px;
     background: linear-gradient(90deg, rgba(15,57,114,1) 0.1%, rgba(44,232,239,1) 57%, rgba(127,119,188,1) 115%);
-    padding-top: 200px;
+    padding-top: 120px;
     &__title {
-        margin-top: 30px;
+        margin-top: 60px;
     }
     &-wrapper {
         margin-top: 40px;
