--- a/src/sass/blocks/_about.scss
+++ b/src/sass/blocks/_about.scss
@@ -28,6 +28,7 @@
         margin-top: 40px;
         font-size: 55px;
         text-align: left;
+        font-weight: 300;
         span {
             font-weight: 600;
         }
