--- a/src/sass/blocks/_media.scss
+++ b/src/sass/blocks/_media.scss
@@ -70,6 +70,9 @@
     .container {
         max-width: 720px;
     }
+    .title {
+        font-size: 72px;
+    }
     .promo {
         &-header {
             &__list {
@@ -96,6 +99,7 @@
             margin: 0 auto;
             width: 460px;
             height: 460px;
+            box-shadow: 6px 6px 10px #342475;
         }
     }
     .roadmap {
@@ -142,6 +146,7 @@
         }
     }
     .guide {
+        padding-top: 0;
         &-wrapper {
             grid-template-columns: 1fr;
             row-gap: 10px;
@@ -206,6 +211,11 @@
                 }
             }
         }
+        .about {
+            &__title {
+                font-size: 62px;
+            }
+        }
         .tokenomika {
             padding-top: 0;
             &-wrapper {
@@ -237,7 +247,7 @@
 
         }
         .memes {
-            height: 1200px;
+            height: 990px;
             &-wrapper {
                 grid-template-columns: repeat(2, 246px);
             }
@@ -280,6 +290,21 @@
             padding-top: 75px;
             padding-left: 0px;
             width: 279px;
+        }
+        &__link {
+            font-size: 30px;
+            line-height: 42px;
+        }
+        &__social {
+            left: 45%;
+            bottom: 75px;
+            width: 170px;
+            img {
+                a {
+                    width: 35px;
+                    height: 35px;
+                }
+            }
         }
     }
     .promo {
@@ -336,7 +361,7 @@
     .roadmap {
         height: 1400px;
         &__title {
-            font-size: 57px;
+            font-size: 49px;
         }
         &__divider {
             width: 70%;
@@ -375,7 +400,7 @@
         }
     }
     .tokenomika {
-        padding-top: 0;
+        padding-top: 50px;
         &__title {
             margin-top: 30px;
             font-size: 48px;
@@ -390,7 +415,7 @@
         }
     }
     .guide {
-        padding-top: 40px;
+        padding-top: 110px;
         &__title {
             font-size: 44px;
         }
@@ -453,10 +478,18 @@
     }
 }
 @media (max-width: 525px) {
+    .promo {
+        padding-top: 30px;
+    }
+    .about {
+        &__title {
+            font-size: 33px;
+        }
+    }
     .memes {
         min-height: 110rem;
         &__title {
-            font-size: 55px;
+            font-size: 50px;
         }
         &-wrapper { 
             grid-template-rows: repeat(5, 230px);
