--- a/src/sass/blocks/_footer.scss
+++ b/src/sass/blocks/_footer.scss
@@ -1,5 +1,6 @@
 .footer {
-    min-height: 500px;
+    padding-top: 10px;
+    min-height: 440px;  
     background: rgb(16,63,118);
     background: linear-gradient(90deg, rgb(0, 40, 96) 0.1%, rgb(47, 226, 232) 57%, rgb(155, 141, 255) 115%);
     .divider {
