--- a/src/sass/blocks/_media.scss
+++ b/src/sass/blocks/_media.scss
@@ -234,7 +234,7 @@
                 width: 543px;
                 &__item {
                     &-title {
-                        font-size: 15px
+                        font-size: 14px
                     }
                 }
            }
@@ -253,8 +253,8 @@
             }
             &__item {
                 &:nth-child(3) {
-                    grid-column: 1;
-                    grid-row: 3;
+                    grid-column: 2;
+                    grid-row: 1/3;
                 }
             }
         }
@@ -394,7 +394,7 @@
             }
             &-list {
                 &__item {
-                    font-size: 19px;
+                    font-size: 18px;
                 }
             }
         }
@@ -416,6 +416,7 @@
     }
     .guide {
         padding-top: 110px;
+        padding-bottom: 60px;
         &__title {
             font-size: 44px;
         }
@@ -448,15 +449,21 @@
     }
     }
     .memes {
-        min-height: 140rem;
+        height: 100%;
         &__title {
             font-size: 55px;
         }
         &-wrapper { 
             justify-content: center;
-            grid-template-columns: repeat(1, 1fr);
-            grid-template-rows: repeat(5, 1fr);
-            row-gap: 50px;
+            grid-template-columns: 1fr;
+            grid-template-rows: repeat(2, 350px);
+            grid-auto-rows: 1fr;
+        }
+        &__item {
+            &:nth-child(3) {
+                grid-column: 1;
+                grid-row: 1/3;
+            }
         }
     }
     .footer {
@@ -487,12 +494,24 @@
         }
     }
     .memes {
-        min-height: 110rem;
+        height: 100%;
         &__title {
             font-size: 50px;
         }
         &-wrapper { 
-            grid-template-rows: repeat(5, 230px);
+            grid-template-rows: repeat(3, 340px);
         }
+        &__item {
+            &:nth-child(3) {
+                img {
+                    object-fit: inherit;
+                }
+            }
+            &:nth-child(1) {
+                img {
+                    object-fit: inherit;
+                }
+            }
+         }
     }
 }
