--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -15,6 +15,7 @@
     font-family: "Shantell Sans", cursive;
     margin: 0;
     padding: 0;
+    scroll-behavior: smooth;
 }
 .container {
     height: 100%;
